force-app/main/default/objects/Property_Visit__c/fields/Visitor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Phone__c</fullName>
    <label>Visitor Phone</label>
    <type>Phone</type>
</CustomField>